Adjusted setttings controller
